Add machine translations

--- a/i18n/po/ja_JP/_guides/all-config.adoc.po
+++ b/i18n/po/ja_JP/_guides/all-config.adoc.po
@@ -18,23 +18,22 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/all-config.adoc:1
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "---\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/all-config.adoc:3
-#, no-wrap
-msgid ""
-"layout: guides-configuration-reference\n"
+#, no-wrap, fuzzy
+msgid "layout: guides-configuration-reference\n"
 "---\n"
-msgstr ""
+msgstr "layout: guides-configuration-reference ---."
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/all-config.adoc:9
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Quarkus - All configuration options"
-msgstr ""
+msgstr "Quarkus - すべての設定オプション"
