--- a/i18n/po/ja_JP/_guides/websockets.adoc.po
+++ b/i18n/po/ja_JP/_guides/websockets.adoc.po
@@ -21,107 +21,126 @@ msgstr ""
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/websockets.adoc:6
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Quarkus - Using WebSockets"
-msgstr ""
+msgstr "Quarkus - ウェブソケットを使用する"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:12
+#, fuzzy
 msgid ""
 "This guide explains how your Quarkus application can utilize web sockets to "
 "create interactive web applications.  Because it's the _canonical_ web "
 "socket application, we are going to create a simple chat application."
 msgstr ""
+"このガイドでは、Quarkusアプリケーションがウェブソケットを利用してインタラクティブなウェブアプリケーションを作成する方法を説明します。定型 "
+"_的な_ウェブソケットアプリケーションなので、簡単なチャットアプリケーションを作成します。"
 
 #. type: Title ==
 #: upstream/_guides/websockets.adoc:13
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Prerequisites"
-msgstr ""
+msgstr "前提条件"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:16
+#, fuzzy
 msgid "To complete this guide, you need:"
-msgstr ""
+msgstr "このガイドを完成させるには、以下のものが必要です。"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:18
+#, fuzzy
 msgid "less than 15 minutes"
-msgstr ""
+msgstr "15分以内"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:19
+#, fuzzy
 msgid "an IDE"
-msgstr ""
+msgstr "アイディーイーイー"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:20
+#, fuzzy
 msgid "JDK 1.8+ installed with `JAVA_HOME` configured appropriately"
-msgstr ""
+msgstr "JDK 1.8+ がインストールされ、 `JAVA_HOME` が適切に設定されています。"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:21
+#, fuzzy
 msgid "Apache Maven {maven-version}"
-msgstr ""
+msgstr "Apache Maven {maven-version} の場合"
 
 #. type: Title ==
 #: upstream/_guides/websockets.adoc:24
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Architecture"
-msgstr ""
+msgstr "建築"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:27
+#, fuzzy
 msgid ""
 "In this guide, we create a straightforward chat application using web "
 "sockets to receive and send messages to the other connected users."
 msgstr ""
+"このガイドでは、Web ソケットを使用して、接続されている他のユーザーとメッセージを送受信するための簡単なチャットアプリケーションを作成します。"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:29
+#, fuzzy
 msgid "image:websocket-guide-architecture.png[alt=Architecture]"
-msgstr ""
+msgstr "image:websocket-guide-architecture.png[alt=Architecture]"
 
 #. type: Title ==
 #: upstream/_guides/websockets.adoc:30
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Solution"
-msgstr ""
+msgstr "解決策"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:34
+#, fuzzy
 msgid ""
 "We recommend that you follow the instructions in the next sections and "
 "create the application step by step.  However, you can skip right to the "
 "completed example."
-msgstr ""
+msgstr "次の章で紹介する手順に沿って、ステップを踏んでアプリを作成することをお勧めします。ただし、完成した例には右に飛ばしても構いません。"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:36
+#, fuzzy
 msgid ""
 "Clone the Git repository: `git clone {quickstarts-clone-url}`, or download "
 "an {quickstarts-archive-url}[archive]."
 msgstr ""
+"Git リポジトリをクローンします: `git clone {quickstarts-clone-url}` 、または {quickstarts-"
+"archive-url}[archive] をダウンロードしてください。"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:38
+#, fuzzy
 msgid ""
 "The solution is located in the `websockets-quickstart` {quickstarts-tree-"
 "url}/websockets-quickstart[directory]."
 msgstr ""
+"ソリューションは `websockets-quickstart` {quickstarts-tree-url}/websockets-"
+"quickstart[directory] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/websockets.adoc:39
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Creating the Maven project"
-msgstr ""
+msgstr "Mavenプロジェクトの作成"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:42
+#, fuzzy
 msgid ""
 "First, we need a new project. Create a new project with the following "
 "command:"
-msgstr ""
+msgstr "まず、新しいプロジェクトが必要です。以下のコマンドで新規プロジェクトを作成します。"
 
 #. type: delimited block -
 #: upstream/_guides/websockets.adoc:50
@@ -136,18 +155,23 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:53
+#, fuzzy
 msgid ""
 "This command generates the Maven project (without any classes) and import "
 "the `undertow-websockets` extension."
 msgstr ""
+"このコマンドは、Mavenプロジェクト（クラスなし）を生成し、 `undertow-websockets` 拡張モジュールをインポートします。"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:56
+#, fuzzy
 msgid ""
 "If you already have your Quarkus project configured, you can add the "
 "`undertow-websockets` extension to your project by running the following "
 "command in your project base directory:"
 msgstr ""
+"すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリで以下のコマンドを実行することで、プロジェクトに "
+"`undertow-websockets` 拡張機能を追加することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/websockets.adoc:60
@@ -157,8 +181,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:63
+#, fuzzy
 msgid "This will add the following to your `pom.xml`:"
-msgstr ""
+msgstr "これにより、 `pom.xml`."
 
 #. type: delimited block -
 #: upstream/_guides/websockets.adoc:70
@@ -172,17 +197,20 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/websockets.adoc:72
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Handling web sockets"
-msgstr ""
+msgstr "ウェブソケットの取り扱い"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:77
+#, fuzzy
 msgid ""
 "Our application contains a single class that handles the web sockets.  "
 "Create the `org.acme.websockets.ChatSocket` class in the `src/main/java` "
 "directory.  Copy the following content into the created file:"
 msgstr ""
+"私たちのアプリケーションには、Web ソケットを処理する単一のクラスが含まれています。 `src/main/java` ディレクトリに `org."
+"acme.websockets.ChatSocket` クラスを作成します。作成したファイルに以下の内容をコピーします。"
 
 #. type: delimited block -
 #: upstream/_guides/websockets.adoc:81 upstream/_guides/websockets.adoc:179
@@ -193,8 +221,7 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_guides/websockets.adoc:84
 #, no-wrap
-msgid ""
-"import java.util.Map;\n"
+msgid "import java.util.Map;\n"
 "import java.util.concurrent.ConcurrentHashMap;\n"
 msgstr ""
 
@@ -232,7 +259,8 @@ msgstr ""
 #, no-wrap
 msgid ""
 "    @OnOpen\n"
-"    public void onOpen(Session session, @PathParam(\"username\") String username) {\n"
+"    public void onOpen(Session session, @PathParam(\"username\") String "
+"username) {\n"
 "        sessions.put(username, session);\n"
 "        broadcast(\"User \" + username + \" joined\");\n"
 "    }\n"
@@ -243,7 +271,8 @@ msgstr ""
 #, no-wrap
 msgid ""
 "    @OnClose\n"
-"    public void onClose(Session session, @PathParam(\"username\") String username) {\n"
+"    public void onClose(Session session, @PathParam(\"username\") String "
+"username) {\n"
 "        sessions.remove(username);\n"
 "        broadcast(\"User \" + username + \" left\");\n"
 "    }\n"
@@ -254,7 +283,8 @@ msgstr ""
 #, no-wrap
 msgid ""
 "    @OnError\n"
-"    public void onError(Session session, @PathParam(\"username\") String username, Throwable throwable) {\n"
+"    public void onError(Session session, @PathParam(\"username\") String "
+"username, Throwable throwable) {\n"
 "        sessions.remove(username);\n"
 "        broadcast(\"User \" + username + \" left on error: \" + throwable);\n"
 "    }\n"
@@ -265,7 +295,8 @@ msgstr ""
 #, no-wrap
 msgid ""
 "    @OnMessage\n"
-"    public void onMessage(String message, @PathParam(\"username\") String username) {\n"
+"    public void onMessage(String message, @PathParam(\"username\") String "
+"username) {\n"
 "        broadcast(\">> \" + username + \": \" + message);\n"
 "    }\n"
 msgstr ""
@@ -278,7 +309,8 @@ msgid ""
 "        sessions.values().forEach(s -> {\n"
 "            s.getAsyncRemote().sendObject(message, result ->  {\n"
 "                if (result.getException() != null) {\n"
-"                    System.out.println(\"Unable to send message: \" + result.getException());\n"
+"                    System.out.println(\"Unable to send message: \" + result."
+"getException());\n"
 "                }\n"
 "            });\n"
 "        });\n"
@@ -293,22 +325,25 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:136
+#, fuzzy
 msgid "Configures the web socket URL"
-msgstr ""
+msgstr "ウェブソケットのURLを設定する"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:137
+#, fuzzy
 msgid "Stores the currently opened web sockets"
-msgstr ""
+msgstr "現在開いているウェブソケットを格納します。"
 
 #. type: Title ==
 #: upstream/_guides/websockets.adoc:138
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "A slick web frontend"
-msgstr ""
+msgstr "洗練されたWebフロントエンド"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:143
+#, fuzzy
 msgid ""
 "All chat applications need a _nice_ UI, well, this one may not be that nice, "
 "but does the work.  Quarkus automatically serves static resources contained "
@@ -317,17 +352,22 @@ msgid ""
 "quickstart/src/main/resources/META-INF/resources/index.html[index.html] file "
 "in it."
 msgstr ""
+"すべてのチャットアプリケーションには _素敵な_UIが必要です。Quarkusは、 `META-INF/resources` "
+"ディレクトリに含まれる静的リソースを自動的に提供します。 `src/main/resources/META-INF/resources` "
+"ディレクトリを作成し、この {quickstarts-blob-url}/websockets-quickstart/src/main/"
+"resources/META-INF/resources/index.html[index.html] ファイルをコピーします。"
 
 #. type: Title ==
 #: upstream/_guides/websockets.adoc:144
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Run the application"
-msgstr ""
+msgstr "アプリケーションの実行"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:147
+#, fuzzy
 msgid "Now, let's see our application in action. Run it with:"
-msgstr ""
+msgstr "では、実際にアプリケーションを見てみましょう。これを使って実行してみてください。"
 
 #. type: delimited block -
 #: upstream/_guides/websockets.adoc:151
@@ -337,60 +377,76 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:154
+#, fuzzy
 msgid "Then open your 2 browser windows to http://localhost:8080/:"
-msgstr ""
+msgstr "そして、2つのブラウザウィンドウを開いて http://localhost:8080/"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:156
+#, fuzzy
 msgid "Enter a name in the top text area (use 2 different names)."
-msgstr ""
+msgstr "上部のテキストエリアに名前を入力します（2種類の名前を使用します）。"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:157
+#, fuzzy
 msgid "Click on connect"
-msgstr ""
+msgstr "接続をクリック"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:158
+#, fuzzy
 msgid "Send and receive messages"
-msgstr ""
+msgstr "メッセージの送受信"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:160
+#, fuzzy
 msgid "image:websocket-guide-screenshot.png[alt=Application]"
-msgstr ""
+msgstr "image:websocket-guide-screenshot.png[alt=Application]"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:163
+#, fuzzy
 msgid ""
 "As usual, the application can be packaged using `./mvnw clean package` and "
 "executed using the `-runner.jar` file.  You can also build the native "
 "executable using `./mvnw package -Pnative`."
 msgstr ""
+"いつものように、 `./mvnw clean package` を使ってアプリケーションをパッケージ化し、 `-runner.jar` "
+"ファイルを使って実行することができます。また、 `./mvnw package -Pnative` "
+"を使用してネイティブの実行ファイルをビルドすることもできます。"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:165
+#, fuzzy
 msgid ""
 "You can also test your web socket applications using the approach detailed "
 "{quickstarts-blob-url}/websockets-quickstart/src/test/java/org/acme/"
 "websockets/ChatTest.java[here]."
 msgstr ""
+"また、{quickstarts-blob-url}/websockets-quickstart/src/test/java/org/acme/"
+"websockets/ChatTest.java[here]の詳細なアプローチを使用して、Webソケットアプリケーションをテストすることもできます。"
 
 #. type: Title ==
 #: upstream/_guides/websockets.adoc:166
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "WebSocket Clients"
-msgstr ""
+msgstr "WebSocketクライアント"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:169
+#, fuzzy
 msgid ""
 "Quarkus also contains a WebSocket client. You can call `ContainerProvider."
 "getWebSocketContainer().connectToServer` to create a websocket connection."
 msgstr ""
+"Quarkusには、WebSocketクライアントも含まれています。 `ContainerProvider."
+"getWebSocketContainer().connectToServer` を呼び出して、Websocket接続を作成することができます。"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:173
+#, fuzzy
 msgid ""
 "When you connect to the server you can either pass in the Class of the "
 "annotated client endpoint you want to use, or an instance of `javax."
@@ -398,13 +454,17 @@ msgid ""
 "use the exact same annotations as you can on the server, except it must be "
 "annotated with `@ClientEndpoint` instead of `@ServerEndpoint`."
 msgstr ""
+"サーバーに接続する際には、使用する注釈付きクライアント・エンドポイントの Class を渡すか、 `javax.websocket.Endpoint` "
+"のインスタンスを渡すことができます。注釈付きエンドポイントを使用している場合は、サーバー上で使用できるのとまったく同じ注釈を使用できますが、注釈は "
+"`@ServerEndpoint` ではなく `@ClientEndpoint` でなければなりません。"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:175
+#, fuzzy
 msgid ""
 "The example below shows the client being used to test the chat endpoint "
 "above."
-msgstr ""
+msgstr "以下の例は、上記のチャットエンドポイントをテストするために使用されるクライアントを示しています。"
 
 #. type: delimited block -
 #: upstream/_guides/websockets.adoc:183
@@ -445,22 +505,22 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_guides/websockets.adoc:198
 #, no-wrap
-msgid ""
-"@QuarkusTest\n"
+msgid "@QuarkusTest\n"
 "public class ChatTest {\n"
 msgstr ""
 
 #. type: delimited block -
 #: upstream/_guides/websockets.adoc:200
 #, no-wrap
-msgid "    private static final LinkedBlockingDeque<String> MESSAGES = new LinkedBlockingDeque<>();\n"
+msgid ""
+"    private static final LinkedBlockingDeque<String> MESSAGES = new "
+"LinkedBlockingDeque<>();\n"
 msgstr ""
 
 #. type: delimited block -
 #: upstream/_guides/websockets.adoc:203
 #, no-wrap
-msgid ""
-"    @TestHTTPResource(\"/chat/stu\")\n"
+msgid "    @TestHTTPResource(\"/chat/stu\")\n"
 "    URI uri;\n"
 msgstr ""
 
@@ -470,11 +530,15 @@ msgstr ""
 msgid ""
 "    @Test\n"
 "    public void testWebsocketChat() throws Exception {\n"
-"        try (Session session = ContainerProvider.getWebSocketContainer().connectToServer(Client.class, uri)) {\n"
-"            Assertions.assertEquals(\"CONNECT\", MESSAGES.poll(10, TimeUnit.SECONDS));\n"
-"            Assertions.assertEquals(\"User stu joined\", MESSAGES.poll(10, TimeUnit.SECONDS));\n"
+"        try (Session session = ContainerProvider.getWebSocketContainer()."
+"connectToServer(Client.class, uri)) {\n"
+"            Assertions.assertEquals(\"CONNECT\", MESSAGES.poll(10, TimeUnit."
+"SECONDS));\n"
+"            Assertions.assertEquals(\"User stu joined\", MESSAGES.poll(10, "
+"TimeUnit.SECONDS));\n"
 "            session.getAsyncRemote().sendText(\"hello world\");\n"
-"            Assertions.assertEquals(\">> stu: hello world\", MESSAGES.poll(10, TimeUnit.SECONDS));\n"
+"            Assertions.assertEquals(\">> stu: hello world\", MESSAGES."
+"poll(10, TimeUnit.SECONDS));\n"
 "        }\n"
 "    }\n"
 msgstr ""
@@ -482,8 +546,7 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_guides/websockets.adoc:216
 #, no-wrap
-msgid ""
-"    @ClientEndpoint\n"
+msgid "    @ClientEndpoint\n"
 "    public static class Client {\n"
 msgstr ""
 
@@ -495,7 +558,8 @@ msgid ""
 "        public void open(Session session) {\n"
 "            MESSAGES.add(\"CONNECT\");\n"
 "            // Send a message to indicate that we are ready,\n"
-"            // as the message handler may not be registered immediately after this callback.\n"
+"            // as the message handler may not be registered immediately "
+"after this callback.\n"
 "            session.getAsyncRemote().sendText(\"_ready_\");\n"
 "        }\n"
 msgstr ""
@@ -518,13 +582,16 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/websockets.adoc:236
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "More WebSocket Information"
-msgstr ""
+msgstr "その他のWebSocket情報"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:239
+#, fuzzy
 msgid ""
 "The Quarkus WebSocket implementation is an implementation of link:https://"
 "eclipse-ee4j.github.io/websocket-api/[Jakarta Websockets]."
 msgstr ""
+"Quarkus WebSocketの実装は、 link:https://eclipse-ee4j.github.io/websocket-api/"
+"[Jakarta Websocket]の実装です。"
