--- a/i18n/po/ja_JP/_guides/class-loading-reference.adoc.po
+++ b/i18n/po/ja_JP/_guides/class-loading-reference.adoc.po
@@ -21,20 +21,23 @@ msgstr ""
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/class-loading-reference.adoc:6
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Quarkus - Class Loading Reference"
-msgstr ""
+msgstr "Quarkus - クラスローディングリファレンス"
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:12
+#, fuzzy
 msgid ""
 "This document explains the Quarkus class loading architecture. It is "
 "intended for extension authors and advanced users who want to understand "
 "exactly how Quarkus works."
 msgstr ""
+"このドキュメントでは、Quarkusのクラスロードアーキテクチャについて説明します。このドキュメントは、Quarkusがどのように動作するかを正確に理解したい拡張機能の作者や上級ユーザーを対象としています。"
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:18
+#, fuzzy
 msgid ""
 "The Quarkus class loading architecture is slightly different depending on "
 "the mode that the application is run in. When running a production "
@@ -43,32 +46,39 @@ msgid ""
 "does not really support multiple ClassLoaders, and is based on a normal "
 "production Quarkus application."
 msgstr ""
+"Quarkusのクラスロードアーキテクチャは、アプリケーションを実行するモードによって若干異なります。本番環境のアプリケーションを実行しているときは、すべてがシステムのClassLoaderでロードされるため、完全にフラットなクラスパスとなります。これは、複数のClassLoaderをサポートしていないネイティブイメージモードにも当てはまり、通常のプロダクションQuarkusアプリケーションをベースにしています。"
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:21
+#, fuzzy
 msgid ""
 "For all other use cases (e.g. tests, dev mode, and building the application) "
 "Quarkus uses the class loading architecture outlined here."
 msgstr ""
+"その他のすべてのユースケース（テスト、開発モード、アプリケーションの構築など）では、Quarkusはここで説明したクラスロードアーキテクチャを使用します。"
 
 #. type: Title ==
 #: upstream/_guides/class-loading-reference.adoc:22
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Reading Class Bytecode"
-msgstr ""
+msgstr "クラスバイトコードの読み取り"
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:26
+#, fuzzy
 msgid ""
 "It is important to use the correct `ClassLoader`. The recommended approach "
 "is to get it by calling the `Thread.currentThread().getContextClassLoader()` "
 "method."
 msgstr ""
+"正しい `ClassLoader` を使用することが重要です。推奨される方法は、 `Thread.currentThread()."
+"getContextClassLoader()` メソッドを呼び出して取得することです。"
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:28
+#, fuzzy
 msgid "Example:"
-msgstr ""
+msgstr "例。"
 
 #. type: delimited block -
 #: upstream/_guides/class-loading-reference.adoc:40
@@ -79,19 +89,21 @@ msgid ""
 "    final String classname = \"com.example.SomeClass\";\n"
 "    final ClassLoader cl = Thread.currentThread().getContextClassLoader();\n"
 "    final byte[] originalBytecode = IoUtil.readClassAsBytes(cl, classname);\n"
-"    final byte[] enhancedBytecode = ... // class instrumentation from originalBytecode\n"
+"    final byte[] enhancedBytecode = ... // class instrumentation from "
+"originalBytecode\n"
 "    return new GeneratedClassBuildItem(true, classname, enhancedBytecode));\n"
 "}\n"
 msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/class-loading-reference.adoc:42
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Bootstrapping Quarkus"
-msgstr ""
+msgstr "Quarkusのブートストラップ"
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:48
+#, fuzzy
 msgid ""
 "All Quarkus applications are created by the QuarkusBootstrap class in the "
 "`independent-projects/bootstrap` module. This class is used to resolve all "
@@ -100,9 +112,13 @@ msgid ""
 "`CuratedApplication`, which contains all the class loading information for "
 "the application."
 msgstr ""
+"すべてのQuarkusアプリケーションは、 `independent-projects/bootstrap` "
+"モジュールのQuarkusBootstrapクラスによって作成されます。このクラスは、Quarkusアプリケーションに必要なすべての関連する依存関係（デプロイメントとランタイムの両方）を解決するために使用されます。このプロセスの最終結果は、 "
+"`CuratedApplication` であり、これにはアプリケーションのすべてのクラスロード情報が含まれています。"
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:52
+#, fuzzy
 msgid ""
 "The `CuratedApplication` can then be used to create an `AugmentAction` "
 "instance, which can create production application and start/restart runtime "
@@ -110,81 +126,96 @@ msgid ""
 "not necessary to have any of the Quarkus deployment classes on the class "
 "path as the curate process will resolve them for you."
 msgstr ""
+"次に、 `CuratedApplication` を使用して `AugmentAction` "
+"インスタンスを作成し、本番アプリケーションを作成したり、ランタイムのものを起動/"
+"再起動したりすることができます。このアプリケーションインスタンスは、分離されたClassLoader内に存在しています。"
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:54
+#, fuzzy
 msgid ""
 "This bootstrap process should be the same no matter how Quarkus is launched, "
 "just with different parameters passed in."
-msgstr ""
+msgstr "このブートストラッププロセスは、Quarkusがどのように起動されても、異なるパラメータが渡されているだけで、同じであるべきです。"
 
 #. type: Title ===
 #: upstream/_guides/class-loading-reference.adoc:55
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Current Run Modes"
-msgstr ""
+msgstr "現在の実行モード"
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:58
+#, fuzzy
 msgid ""
 "At the moment we have the following use cases for bootstrapping Quarkus:"
-msgstr ""
+msgstr "現在のところ、Quarkusのブートストラップには以下のようなユースケースがあります。"
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:60
+#, fuzzy
 msgid "Maven creating production application"
-msgstr ""
+msgstr "本番アプリケーションを作成するMaven"
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:61
+#, fuzzy
 msgid "Maven dev mode"
-msgstr ""
+msgstr "Mavenの開発モード"
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:62
+#, fuzzy
 msgid "Gradle creating a production application"
-msgstr ""
+msgstr "Gradleによる本番アプリケーションの作成"
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:63
+#, fuzzy
 msgid "Gradle dev mode"
-msgstr ""
+msgstr "グラドルの開発モード"
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:64
+#, fuzzy
 msgid "QuarkusTest (Maven, Gradle and IDE)"
-msgstr ""
+msgstr "QuarkusTest (Maven、Gradle、IDE)"
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:65
+#, fuzzy
 msgid "QuarkusUnitTest (Maven, Gradle and IDE)"
-msgstr ""
+msgstr "QuarkusUnitTest (Maven、Gradle、IDE)"
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:66
+#, fuzzy
 msgid "QuarkusDevModeTest (Maven, Gradle and IDE)"
-msgstr ""
+msgstr "QuarkusDevModeTest（Maven、Gradle、IDE"
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:67
+#, fuzzy
 msgid "Arquillian Adaptor"
-msgstr ""
+msgstr "アルキリアンアダプター"
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:69
+#, fuzzy
 msgid ""
 "One of the goals of this refactor is to have all these different run modes "
 "boot Quarkus in fundamentally the same way."
-msgstr ""
+msgstr "このリファクタの目的の一つは、これらの異なるランモードのすべてが基本的に同じ方法でQuarkusを起動できるようにすることです。"
 
 #. type: Title ===
 #: upstream/_guides/class-loading-reference.adoc:70
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Notes on Transformer Safety"
-msgstr ""
+msgstr "トランスの安全性に関する注意事項"
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:76
+#, fuzzy
 msgid ""
 "A ClassLoader is said to be 'transformer safe' if it is safe to load classes "
 "in the class loader before the transformers are ready. Once a class has been "
@@ -193,41 +224,49 @@ msgid ""
 "Loading classes in a transformer safe ClassLoader will not prevent the "
 "transformation, as the loaded class is not used at runtime."
 msgstr ""
+"ClassLoader "
+"は、トランスフォーマが準備される前にクラスをロードしても安全であれば、「トランスフォーマセーフ」と言われます。一度ロードされたクラスは変更することができないので、もしトランスフォーマの準備が整う前にロードされた場合、変換が機能しなくなります。トランスフォーマが安全な "
+"ClassLoader でクラスをロードしても、ロードされたクラスは実行時には使用されないので、変換を妨げることはありません。"
 
 #. type: Title ==
 #: upstream/_guides/class-loading-reference.adoc:77
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "ClassLoader Implementations"
-msgstr ""
+msgstr "クラスローダの実装"
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:80
+#, fuzzy
 msgid "Quarkus has the following ClassLoaders:"
-msgstr ""
+msgstr "Quarkusには以下のClassLoadersがあります。"
 
 #. type: Labeled list
 #: upstream/_guides/class-loading-reference.adoc:81
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Base ClassLoader"
-msgstr ""
+msgstr "ベースの ClassLoader"
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:85
+#, fuzzy
 msgid ""
 "This is usually the normal JVM System ClassLoader. In some environments such "
 "as Maven it may be different. This ClassLoader is used to load the bootstrap "
 "classes, and other ClassLoader instances will delegate the loading of JDK "
 "classes to it."
 msgstr ""
+"これは通常、通常のJVM System ClassLoaderです。Maven のような環境では異なる場合があります。この ClassLoader "
+"はブートストラップクラスをロードするために使用され、他の ClassLoader インスタンスは JDK クラスのロードをこれに委譲します。"
 
 #. type: Labeled list
 #: upstream/_guides/class-loading-reference.adoc:86
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Augment ClassLoader"
-msgstr ""
+msgstr "クラスローダの拡張"
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:92
+#, fuzzy
 msgid ""
 "This loads all the `-deployment` artifacts and their dependencies, as well "
 "as other user dependencies. It does not load the application root or any hot "
@@ -236,9 +275,15 @@ msgid ""
 "that may be hot deployed). Its parent is the base ClassLoader, and it is "
 "transformer safe."
 msgstr ""
+"これは、すべての `-deployment` "
+"アーティファクトとその依存関係、および他のユーザ依存関係をロードします。アプリケーションのルートやホットデプロイされたコードはロードしません。この "
+"ClassLoader は永続的に動作し、アプリケーションが再起動してもそれは残ります "
+"(ホットデプロイされている可能性のあるアプリケーションクラスをロードできないのはそのためです)。親はベースの ClassLoader "
+"であり、トランスファーセーフです。"
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:96
+#, fuzzy
 msgid ""
 "At present this can be configured to delegate to the Base ClassLoader, "
 "however the plan is for this option to go away and always have this as an "
@@ -246,37 +291,46 @@ msgid ""
 "it means that all the builder classes are isolated, which means that use "
 "cases that want to customise the build chains are slightly more complex."
 msgstr ""
+"現在のところ、これはベース・クラスローダに委譲するように設定することができますが、計画ではこのオプションは廃止され、常に分離されたクラスローダとして使用することになっています。これを分離型 "
+"ClassLoader にすることは、すべてのビルダクラスが分離されていることを意味するので複雑です。"
 
 #. type: Labeled list
 #: upstream/_guides/class-loading-reference.adoc:97
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Deployment ClassLoader"
-msgstr ""
+msgstr "デプロイメントクラスローダ"
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:100
+#, fuzzy
 msgid ""
 "This can load all application classes, its parent is the Augment ClassLoader "
 "so it can also load all deployment classes."
 msgstr ""
+"これはすべてのアプリケーションクラスをロードすることができ、その親は Augment ClassLoader "
+"なので、すべてのデプロイメントクラスをロードすることもできます。"
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:103
+#, fuzzy
 msgid ""
 "This ClassLoader is non-persistent, it will be re-created when the "
 "application is started, and is isolated. This ClassLoader is the context "
 "ClassLoader that is used when running the build steps. It is also "
 "transformer safe."
 msgstr ""
+"この ClassLoader は永続的ではなく、アプリケーションの起動時に再作成され、分離されています。この ClassLoader "
+"は、ビルドステップを実行する際に使用されるコンテキスト ClassLoader です。また、トランスファーセーフでもあります。"
 
 #. type: Labeled list
 #: upstream/_guides/class-loading-reference.adoc:104
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Base Runtime ClassLoader"
-msgstr ""
+msgstr "基本ランタイム ClassLoader"
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:110
+#, fuzzy
 msgid ""
 "This loads all the runtime extension dependencies, as well as other user "
 "dependencies (note that this may include duplicate copies of classes also "
@@ -285,9 +339,14 @@ msgid ""
 "application restarts it will remain (which is why it cannot load application "
 "classes that may be hot deployed). Its parent is the base ClassLoader."
 msgstr ""
+"これは、他のユーザ依存関係と同様に、すべてのランタイム拡張依存関係をロードします(これには Augment ClassLoader "
+"によってロードされたクラスの重複コピーも含まれる可能性があることに注意してください)。アプリケーションのルートやホットデプロイされたコードはロードされません。この "
+"ClassLoader は永続的なもので、アプリケーションが再起動しても残ります "
+"(ホットデプロイされている可能性のあるアプリケーションクラスをロードできないのはそのためです)。親はベースの ClassLoader です。"
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:117
+#, fuzzy
 msgid ""
 "This loads code that is not hot-reloadable, but it does support "
 "transformation (although once the class is loaded this transformation is no "
@@ -299,9 +358,14 @@ msgid ""
 "static methods implemented, however this transformation only happens once, "
 "so restarts use the copy of the class that was created on the first start."
 msgstr ""
+"これはホットリロードできないコードをロードしますが、変換をサポートしています "
+"(ただし、クラスがロードされるとこの変換はできなくなります)。これは、最初のアプリケーション起動時に登録されたトランスフォーマのみが有効になることを意味しますが、これらのトランスフォーマはアイドエンプテントであることが期待されているため、これは問題を引き起こすことはないはずです。ここで必要となる可能性のある変換の例として、外部 "
+"jar にパッケージ化された Panache "
+"エンティティがあります。このクラスは静的メソッドを実装するために変換する必要がありますが、この変換は一度しか行われないため、再起動時には最初の起動時に作成されたクラスのコピーを使用します。"
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:121
+#, fuzzy
 msgid ""
 "This ClassLoader is isolated from the Augment and Deployment ClassLoaders. "
 "This means that it is not possible to set values in a static field in the "
@@ -309,63 +373,76 @@ msgid ""
 "applications to behave more like a production application (production "
 "applications are isolated in that they run in a whole new JVM)."
 msgstr ""
+"このClassLoaderは、AugmentとDeploymentのClassLoaderから分離されています。つまり、デプロイメント側の静的フィールドに値を設定して、実行時に読み込まれることを期待することはできません。これにより、開発アプリケーションやテストアプリケーションが本番アプリケーションのように振る舞うことができます(本番アプリケーションは全く新しいJVMで実行されるという点で分離されています)。"
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:124
+#, fuzzy
 msgid ""
 "This also means that the runtime version can be linked against a different "
 "set of dependencies, e.g. the hibernate version used at deployment time "
 "might want to include ByteBuddy, while the version used at runtime does not."
 msgstr ""
+"例えば、デプロイ時に使用する hibernate バージョンには ByteBuddy "
+"が含まれていても、実行時に使用するバージョンには含まれていない場合があります。"
 
 #. type: Labeled list
 #: upstream/_guides/class-loading-reference.adoc:125
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Runtime Class Loader"
-msgstr ""
+msgstr "ランタイム クラス ローダ"
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:129
+#, fuzzy
 msgid ""
 "This ClassLoader is used to load the application classes and other hot "
 "deployable resources. Its parent is the base runtime ClassLoader, and it is "
 "recreated when the application is restarted."
 msgstr ""
+"この ClassLoader は、アプリケーションクラスやその他のホットデプロイ可能なリソースをロードするために使用されます。親はベースのランタイム "
+"ClassLoader で、アプリケーションの再起動時に再作成されます。"
 
 #. type: Title ==
 #: upstream/_guides/class-loading-reference.adoc:131
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Isolated ClassLoaders"
-msgstr ""
+msgstr "分離型クラスローダ"
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:135
+#, fuzzy
 msgid ""
 "The runtime ClassLoader is always isolated. This means that it will have its "
 "own copies of almost every class from the resolved dependency list. The "
 "exception to this are:"
 msgstr ""
+"ランタイムの ClassLoader "
+"は常に分離されています。これは、解決された依存関係リストのほとんどすべてのクラスの独自のコピーを持つことを意味します。これには例外があります。"
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:137
+#, fuzzy
 msgid "JDK classes"
-msgstr ""
+msgstr "JDK クラス"
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:138
+#, fuzzy
 msgid ""
 "Classes from artifacts that extensions have marked as parent first (more on "
 "this later)."
-msgstr ""
+msgstr "拡張機能が親を最初にマークしたアーティファクトからのクラス (これについては後述します)。"
 
 #. type: Title ===
 #: upstream/_guides/class-loading-reference.adoc:139
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Parent First Dependencies"
-msgstr ""
+msgstr "親優先の依存関係"
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:144
+#, fuzzy
 msgid ""
 "There are some classes that should not be loaded in an isolated manner, but "
 "that should always be loaded by the system ClassLoader (or whatever "
@@ -373,26 +450,32 @@ msgid ""
 "not need to worry about this, however there are a few cases where this is "
 "necessary:"
 msgstr ""
+"分離された方法でロードされるべきではないクラスがいくつかありますが、それは常にシステムのClassLoader（またはQuarkusのブートストラップを担当しているClassLoader）によってロードされなければなりません。ほとんどの拡張機能はこのことを気にする必要はありませんが、必要な場合もあります。"
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:146
+#, fuzzy
 msgid ""
 "Some logging related classes, as logging must be loaded by the system "
 "ClassLoader"
-msgstr ""
+msgstr "ロギングはシステムの ClassLoader によってロードされなければならないので、いくつかのロギング関連のクラス"
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:147
+#, fuzzy
 msgid "Quarkus bootstrap itself"
-msgstr ""
+msgstr "Quarkusのブートストラップ自体"
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:151
+#, fuzzy
 msgid ""
 "If this is required it can be configured in the `quarkus-bootstrap-maven-"
 "plugin`. Note that if you mark a dependency as parent first then all of its "
 "dependencies must also be parent first, or a `LinkageError` can occur."
 msgstr ""
+"これが必要な場合は、 `quarkus-bootstrap-maven-plugin` で設定することができます。 `LinkageError` "
+"依存関係を親を最初にマークした場合は、その依存関係もすべて親を最初にしなければならないことに注意してください。"
 
 #. type: delimited block -
 #: upstream/_guides/class-loading-reference.adoc:167
@@ -403,10 +486,14 @@ msgid ""
 "    <artifactId>quarkus-bootstrap-maven-plugin</artifactId>\n"
 "    <configuration>\n"
 "        <parentFirstArtifacts>\n"
-"            <parentFirstArtifact>io.quarkus:quarkus-bootstrap-core</parentFirstArtifact>\n"
-"            <parentFirstArtifact>io.quarkus:quarkus-development-mode-spi</parentFirstArtifact>\n"
-"            <parentFirstArtifact>org.jboss.logmanager:jboss-logmanager-embedded</parentFirstArtifact>\n"
-"            <parentFirstArtifact>org.jboss.logging:jboss-logging</parentFirstArtifact>\n"
+"            <parentFirstArtifact>io.quarkus:quarkus-bootstrap-core</"
+"parentFirstArtifact>\n"
+"            <parentFirstArtifact>io.quarkus:quarkus-development-mode-spi</"
+"parentFirstArtifact>\n"
+"            <parentFirstArtifact>org.jboss.logmanager:jboss-logmanager-"
+"embedded</parentFirstArtifact>\n"
+"            <parentFirstArtifact>org.jboss.logging:jboss-logging</"
+"parentFirstArtifact>\n"
 "            <parentFirstArtifact>org.ow2.asm:asm</parentFirstArtifact>\n"
 "        </parentFirstArtifacts>\n"
 "    </configuration>\n"
@@ -415,12 +502,13 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/class-loading-reference.adoc:169
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Banned Dependencies"
-msgstr ""
+msgstr "禁止された依存関係"
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:177
+#, fuzzy
 msgid ""
 "There are some dependencies that we can be sure we do not want. This "
 "generally happens when a dependency has had a name change (e.g. smallrye-"
@@ -433,6 +521,12 @@ msgid ""
 "`quarkus-extension.properties` file). Simply add an `excludedArtifacts` "
 "section as shown below:"
 msgstr ""
+"依存関係の中には、必要ないと確信できるものもあります。これは一般的に、依存関係の名前が変更された場合に起こります（例：smallrye-"
+"configがグループを `org.smallrye` から `org.smallrye.config` に変更した、 `javax` → "
+"`jakarta` "
+"のリネームなど）。これは問題を引き起こす可能性があります。これらのアーティファクトが依存関係ツリーで終わると、Quarkusと互換性のない古いクラスがロードされる可能性があるからです。この問題に対処するために、拡張機能では、決してロードしてはいけないアーティファクトを指定することができます。これは、 "
+"`quarkus-extension.properties` ファイルを生成する pom の `quarkus-bootstrap-maven-"
+"plugin` 設定を変更することで行います。以下のように `excludedArtifacts` セクションを追加するだけです。"
 
 #. type: delimited block -
 #: upstream/_guides/class-loading-reference.adoc:190
@@ -452,8 +546,11 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/class-loading-reference.adoc:193
+#, fuzzy
 msgid ""
 "This should only be done if the extension depends on a newer version of "
 "these artifacts. If the extension does not bring in a replacement artifact "
 "as a dependency then classes the application needs might end up missing."
 msgstr ""
+"これは、拡張機能がこれらのアーティファクトの新しいバージョンに依存している場合にのみ行うべきです。もし拡張モジュールが代替アーティファクトを依存関係として持ち込まなかった場合、 "
+"アプリケーションが必要とするクラスが見つからなくなってしまうかもしれません。"
