--- a/i18n/po/ja_JP/_guides/funqy-amazon-lambda-http.adoc.po
+++ b/i18n/po/ja_JP/_guides/funqy-amazon-lambda-http.adoc.po
@@ -21,12 +21,13 @@ msgstr ""
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/funqy-amazon-lambda-http.adoc:6
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Quarkus - Funqy HTTP Binding with Amazon Lambda "
-msgstr ""
+msgstr "Quarkus - Amazon Lambdaを使ったFunqy HTTPバインディング"
 
 #. type: Plain text
 #: upstream/_guides/funqy-amazon-lambda-http.adoc:14
+#, fuzzy
 msgid ""
 "If you want to allow HTTP clients to invoke on your Funqy functions on AWS "
 "Lambda, Quarkus allows you to expose multiple Funqy functions through HTTP "
@@ -34,62 +35,85 @@ msgid ""
 "regular Funqy AWS Lambda integration and also requires you to use AWS API "
 "Gateway."
 msgstr ""
+"HTTPクライアントがAWS Lambda上のFunqy関数を呼び出すことを許可したい場合、Quarkusでは、1つのAWS "
+"LambdaとしてデプロイされたHTTPを通して複数のFunqy関数を公開することができます。この方法では、通常のFunqy AWS "
+"Lambdaの統合よりもオーバーヘッドが追加され、AWS API Gatewayを使用する必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/funqy-amazon-lambda-http.adoc:19
+#, fuzzy
 msgid ""
 "Follow the link:amazon-lambda-http[Amazon Lambda Http Guide].  It walks "
 "through using a variety of HTTP frameworks on Amazon Lambda, including Funqy."
+""
 msgstr ""
+"link:amazon-lambda-http[Amazon Lambda Http Guide]に従ってください。それは、Funqyを含むAmazon "
+"Lambda上で様々なHTTPフレームワークを使用する方法を説明します。"
 
 #. type: Plain text
 #: upstream/_guides/funqy-amazon-lambda-http.adoc:25
+#, fuzzy
 msgid ""
-"The Funqy HTTP + AWS Lambda binding is not a replacement for REST over "
-"HTTP.  Because Funqy needs to be portable across a lot of different "
-"protocols and function providers its HTTP binding is very minimalistic and "
-"you will lose REST features like linking and the ability to leverage HTTP "
-"features like cache-control and conditional GETs.  You may want to consider "
-"using Quarkus's JAX-RS, Spring MVC, or Vert.x Web Reactive Route link:amazon-"
+"The Funqy HTTP + AWS Lambda binding is not a replacement for REST over HTTP. "
+" Because Funqy needs to be portable across a lot of different protocols and "
+"function providers its HTTP binding is very minimalistic and you will lose "
+"REST features like linking and the ability to leverage HTTP features like "
+"cache-control and conditional GETs.  You may want to consider using "
+"Quarkus's JAX-RS, Spring MVC, or Vert.x Web Reactive Route link:amazon-"
 "lambda-http[support] instead.  They also work with Quarkus and AWS Lambda."
 msgstr ""
+"Funqy HTTP + AWS "
+"LambdaバインディングはHTTP上のRESTを置き換えるものではありません。Funqyは多くの異なるプロトコルや関数プロバイダに移植する必要があるため、HTTPバインディングは非常にミニマムで、リンクのようなRESTの機能やキャッシュコントロールや条件付きGETのようなHTTPの機能を利用する機能を失うことになります。代わりに、QuarkusのJAX-"
+"RS、Spring MVC、またはVert.x Web Reactive Routeの link:amazon-lambda-"
+"http[サポートを]使用することを検討するとよいでしょう。また、QuarkusやAWS Lambdaとも連携しています。"
 
 #. type: Title ==
 #: upstream/_guides/funqy-amazon-lambda-http.adoc:26
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "An additional Quickstart"
-msgstr ""
+msgstr "追加のクイックスタート"
 
 #. type: Plain text
 #: upstream/_guides/funqy-amazon-lambda-http.adoc:30
+#, fuzzy
 msgid ""
 "Beyond generating an AWS project that is covered in the link:amazon-lambda-"
 "http[Amazon Lambda Http Guide], there's also a quickstart for running Funqy "
 "HTTP on AWS Lambda."
 msgstr ""
+"link:amazon-lambda-http[Amazon Lambda Http "
+"Guide]でカバーされているAWSプロジェクトを生成する以外にも、AWS Lambda上でFunqy "
+"HTTPを実行するためのクイックスタートもあります。"
 
 #. type: Plain text
 #: upstream/_guides/funqy-amazon-lambda-http.adoc:32
+#, fuzzy
 msgid ""
 "Clone the Git repository: `git clone {quickstarts-clone-url}`, or download "
 "an {quickstarts-archive-url}[archive]."
 msgstr ""
+"Git リポジトリをクローンします: `git clone {quickstarts-clone-url}` 、または {quickstarts-"
+"archive-url}[archive] をダウンロードしてください。"
 
 #. type: Plain text
 #: upstream/_guides/funqy-amazon-lambda-http.adoc:34
+#, fuzzy
 msgid ""
 "The solution is located in the `funqy-amazon-lambda-quickstart` {quickstarts-"
 "tree-url}/funqy-quickstarts/funqy-amazon-lambda-http-quickstart[directory]."
 msgstr ""
+"ソリューションは `funqy-amazon-lambda-quickstart` {quickstarts-tree-url}/funqy-"
+"quickstarts/funqy-amazon-lambda-http-quickstart[directory] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/funqy-amazon-lambda-http.adoc:35
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "The Code"
-msgstr ""
+msgstr "コード"
 
 #. type: Plain text
 #: upstream/_guides/funqy-amazon-lambda-http.adoc:39
+#, fuzzy
 msgid ""
 "There is nothing special about the code and more importantly nothing AWS "
 "specific.  Funqy functions can be deployed to many different environments "
@@ -97,21 +121,27 @@ msgid ""
 "code as the {quickstarts-tree-url}/funqy-quickstarts/funqy-http-"
 "quickstart[funqy-http-quickstart]."
 msgstr ""
+"コードには何も特別なものはありませんし、もっと重要なのはAWSに特化したものは何もありません。Funqy関数は様々な環境にデプロイすることができ、AWS "
+"Lambdaもその一つです。Javaのコードは、実は{quickstarts-tree-url}/funqy-quickstarts/funqy-"
+"http-quickstart[funqy-http-quickstart]と全く同じコードです。"
 
 #. type: Title ==
 #: upstream/_guides/funqy-amazon-lambda-http.adoc:40
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Getting Started"
-msgstr ""
+msgstr "はじめに"
 
 #. type: Plain text
 #: upstream/_guides/funqy-amazon-lambda-http.adoc:44
+#, fuzzy
 msgid ""
 "The steps to get this quickstart running are exactly the same as defined in "
 "the link:amazon-lambda-http[Amazon Lambda HTTP Guide].  This differences are "
 "that you are running from a quickstart and the maven dependencies are "
 "slightly different."
 msgstr ""
+"このクイックスタートを実行するための手順は、 link:amazon-lambda-http[Amazon Lambda HTTP "
+"Guide]で定義されているものと全く同じです。この違いは、クイックスタートから実行していることと、mavenの依存関係が若干異なることです。"
 
 #. type: delimited block -
 #: upstream/_guides/funqy-amazon-lambda-http.adoc:55
