--- a/i18n/po/ja_JP/_guides/funqy-azure-functions-http.adoc.po
+++ b/i18n/po/ja_JP/_guides/funqy-azure-functions-http.adoc.po
@@ -21,20 +21,24 @@ msgstr ""
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/funqy-azure-functions-http.adoc:6
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Quarkus - Funqy HTTP Binding with Azure Functions"
-msgstr ""
+msgstr "Quarkus - Azure関数を使用したFunqy HTTPバインディング"
 
 #. type: Plain text
 #: upstream/_guides/funqy-azure-functions-http.adoc:13
+#, fuzzy
 msgid ""
 "You can use link:funqy-http[Funqy HTTP] on Azure Functions.  This allows you "
 "to invoke on multiple Funqy functions using HTTP deployed as one Azure "
 "Function."
 msgstr ""
+"Azure Function上で link:funqy-http[Funqy HTTPを]使用することができます。これにより、1つのAzure "
+"FunctionとしてデプロイされたHTTPを使用して複数のFunqy Function上で呼び出すことができます。"
 
 #. type: Plain text
 #: upstream/_guides/funqy-azure-functions-http.adoc:19
+#, fuzzy
 msgid ""
 "The Funqy HTTP + Azure Functions binding is not a replacement for REST over "
 "HTTP.  Because Funqy needs to be portable cross a lot of different protocols "
@@ -45,11 +49,18 @@ msgid ""
 "functions-http[support] instead.  They also work with Quarkus and Azure "
 "Functions."
 msgstr ""
+"Funqy HTTP + Azure "
+"FunctionsバインディングはHTTP上のRESTの代わりではありません。Funqyは多くの異なるプロトコルや関数プロバイダを横断してポータブルである必要があるため、HTTPバインディングは非常にミニマムであり、リンクのようなREST機能やキャッシュコントロールや条件付きGETのようなHTTP機能を活用する機能を失うことになります。代わりに、QuarkusのJAX-"
+"RS、Spring MVC、またはVert.x Web Reactive Routeの link:azure-functions-"
+"http[サポートを]使用することを検討するとよいでしょう。また、QuarkusやAzure Functionsとも連携しています。"
 
 #. type: Plain text
 #: upstream/_guides/funqy-azure-functions-http.adoc:25
+#, fuzzy
 msgid ""
 "Follow the link:azure-functions-http[Azure Functions Http Guide].  It walks "
 "through using a variety of HTTP frameworks on Azure Functions.  Including "
 "Funqy."
 msgstr ""
+"link:azure-functions-http[Azure Functions Http Guide]に従ってください。これは、Azure "
+"Functions上で様々なHTTPフレームワークを使用する方法を説明しています。Funqyを含む。"
