--- a/i18n/po/ja_JP/_guides/ide-configuration.adoc.po
+++ b/i18n/po/ja_JP/_guides/ide-configuration.adoc.po
@@ -18,22 +18,25 @@ msgstr ""
 
 #. type: Title =
 #: upstream/_guides/ide-configuration.adoc:2
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "{project-name} - Project Scaffolding and IDE"
-msgstr ""
+msgstr "プロジェクト名} - プロジェクトの足場とIDE"
 
 #. type: Title ==
 #: upstream/_guides/ide-configuration.adoc:5
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Creating a new project"
-msgstr ""
+msgstr "新規プロジェクトの作成"
 
 #. type: Plain text
 #: upstream/_guides/ide-configuration.adoc:9
+#, fuzzy
 msgid ""
 "Remember, you need to configure Maven as indicated in the link:maven-config."
 "html[Maven configuration page].  Then, you can scaffold a new project with:"
 msgstr ""
+"link:maven-config."
+"html[Mavenの設定ページ]に示されているように、Mavenを設定する必要があることを覚えておいてください。そして、新しいプロジェクトを足場にします。"
 
 #. type: delimited block -
 #: upstream/_guides/ide-configuration.adoc:17
@@ -48,22 +51,27 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/ide-configuration.adoc:21
+#, fuzzy
 msgid ""
 "If you just launch `mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:"
 "create` the Maven plugin asks for user inputs. You can disable (and use "
 "default values) this interactive mode by passing `-B` to the Maven command."
 msgstr ""
+"`mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create` "
+"を起動するだけで、Maven プラグインはユーザ入力を要求します。 `-B` を Maven "
+"コマンドに渡すことで、この対話型モードを無効にすることができます (デフォルト値を使用します)。"
 
 #. type: Plain text
 #: upstream/_guides/ide-configuration.adoc:23
+#, fuzzy
 msgid ""
 "The following table lists the attributes you can pass to the `create` "
 "command:"
-msgstr ""
+msgstr "次の表は、 `create` コマンドに渡すことができる属性の一覧です。"
 
 #. type: Table
 #: upstream/_guides/ide-configuration.adoc:54
-#, no-wrap
+#, no-wrap, fuzzy
 msgid ""
 "| Attribute\n"
 "| Default Value\n"
@@ -75,7 +83,8 @@ msgid ""
 "\n"
 "| `projectArtifactId`\n"
 "| _mandatory_\n"
-"| The artifact id of the created project. Not passing it triggers the interactive mode.\n"
+"| The artifact id of the created project. Not passing it triggers the "
+"interactive mode.\n"
 "\n"
 "| `projectVersion`\n"
 "| `1.0-SNAPSHOT`\n"
@@ -93,219 +102,266 @@ msgid ""
 "| _[]_\n"
 "| The list of extensions to add to the project (comma-separated)\n"
 "\n"
-msgstr ""
+msgstr "| 属性｜属性｜デフォルト値｜説明"
 
 #. type: Plain text
 #: upstream/_guides/ide-configuration.adoc:58
+#, fuzzy
 msgid ""
 "If you decide to generate a REST resource (using the `className` attribute), "
 "the endpoint is exposed at: `http://localhost:8080/$root/$path`.  If you use "
 "the default `root` and `path`, the URL is: http://localhost:8080/hello."
 msgstr ""
+"REST リソースを生成することにした場合 ( `className` 属性を使用)、エンドポイントは次の場所で公開されます。 `&lt;a href="
+"\"http://localhost:8080/$root/$path\" class=\"bare\"&gt;http://localhost:"
+"8080/$root/$path&lt;/a&gt;`.デフォルトの `root` と `path` を使用する場合、URL は http://"
+"localhost:8080/hello  です。"
 
 #. type: Plain text
 #: upstream/_guides/ide-configuration.adoc:61
+#, fuzzy
 msgid ""
 "The project is either generated in the current directory or in a directory "
 "named after the passed artifactId.  If the current directory is empty, the "
 "project is generated in-place."
 msgstr ""
+"プロジェクトは、カレント・ディレクトリに生成されるか、渡されたartifactIdにちなんだ名前のディレクトリに生成されます。カレントディレクトリが空の場合，プロジェクトはその場で生成されます．"
 
 #. type: Plain text
 #: upstream/_guides/ide-configuration.adoc:64
+#, fuzzy
 msgid ""
 "A `Dockerfile` is also generated in `src/main/docker`.  Instructions to "
 "build the image and run the container are written in the `Dockerfile`."
 msgstr ""
+"`Dockerfile` `src/main/docker` も生成されています。イメージをビルドしてコンテナを実行する手順は に書かれています。 "
+"`Dockerfile`"
 
 #. type: Title ==
 #: upstream/_guides/ide-configuration.adoc:65
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Dealing with extensions"
-msgstr ""
+msgstr "拡張子への対応"
 
 #. type: Plain text
 #: upstream/_guides/ide-configuration.adoc:69
+#, fuzzy
 msgid ""
 "You can list extensions with: `mvn quarkus:list-extensions`.  You can enable "
 "an extension using:"
 msgstr ""
+"拡張機能をリストアップするには、次のようにします: `mvn quarkus:list-extensions` "
+"。を使用して拡張機能を有効にすることができます。"
 
 #. type: Plain text
 #: upstream/_guides/ide-configuration.adoc:72
+#, fuzzy
 msgid "mvn quarkus:add-extension -Dextensions=\"validation\""
-msgstr ""
+msgstr "mvn quarkus:add-extensions -Dextensions=\"validation\""
 
 #. type: Plain text
 #: upstream/_guides/ide-configuration.adoc:74
+#, fuzzy
 msgid "Extensions are passed using a comma-separated list."
-msgstr ""
+msgstr "拡張機能は、カンマ区切りのリストを使用して渡されます。"
 
 #. type: Title ==
 #: upstream/_guides/ide-configuration.adoc:75
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Development mode"
-msgstr ""
+msgstr "開発モード"
 
 #. type: Plain text
 #: upstream/_guides/ide-configuration.adoc:79
+#, fuzzy
 msgid ""
 "Quarkus comes with a built-in development mode.  Run you application with:"
-msgstr ""
+msgstr "Quarkusには開発モードが組み込まれています。アプリケーションを実行します。"
 
 #. type: Plain text
 #: upstream/_guides/ide-configuration.adoc:82
+#, fuzzy
 msgid "mvn compile quarkus:dev"
-msgstr ""
+msgstr "mvn コンパイル quarkus:dev"
 
 #. type: Plain text
 #: upstream/_guides/ide-configuration.adoc:85
+#, fuzzy
 msgid ""
 "You can then update the application sources, resources and configurations.  "
 "The changes are automatically reflected in your running application."
-msgstr ""
+msgstr "その後、アプリケーションのソース、リソース、および設定を更新することができます。変更は、実行中のアプリケーションに自動的に反映されます。"
 
 #. type: Title ==
 #: upstream/_guides/ide-configuration.adoc:86
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Debugging"
-msgstr ""
+msgstr "デバッグ"
 
 #. type: Plain text
 #: upstream/_guides/ide-configuration.adoc:89
+#, fuzzy
 msgid "You can run a Quarkus application in debug mode using:"
-msgstr ""
+msgstr "を使用して、Quarkusアプリケーションをデバッグモードで実行することができます。"
 
 #. type: Plain text
 #: upstream/_guides/ide-configuration.adoc:92
+#, fuzzy
 msgid "mvn compile quarkus:dev -Ddebug=true"
-msgstr ""
+msgstr "mvn コンパイル quarkus:dev -Ddebug=true"
 
 #. type: Plain text
 #: upstream/_guides/ide-configuration.adoc:94
+#, fuzzy
 msgid "Then, attach your debugger to `localhost:5005`."
-msgstr ""
+msgstr "次に、デバッガを `localhost:5005` にアタッチします。"
 
 #. type: Title ==
 #: upstream/_guides/ide-configuration.adoc:95
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Import in your IDE"
-msgstr ""
+msgstr "IDEでのインポート"
 
 #. type: Plain text
 #: upstream/_guides/ide-configuration.adoc:99
+#, fuzzy
 msgid ""
 "Once you have a <<project-creation, project generated>>, you can import it "
 "in your favorite IDE.  The only requirement is the ability to import a Maven "
 "project."
 msgstr ""
+"link:#project-"
+"creation[プロジェクトを生成し]たら、お気に入りのIDEでインポートすることができます。唯一の要件は、Mavenプロジェクトをインポートできることです。"
 
 #. type: Plain text
 #: upstream/_guides/ide-configuration.adoc:101
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "**Eclipse**\n"
-msgstr ""
+msgstr "*エクリプス*"
 
 #. type: Plain text
 #: upstream/_guides/ide-configuration.adoc:106
+#, fuzzy
 msgid ""
 "In Eclipse, click on: `File -> Import`.  In the wizard, select: `Maven -> "
 "Existing Maven Project`.  On the next screen, select the root location of "
 "the project.  The next screen list the found modules; select the generated "
 "project and click on `Finish`. Done!"
 msgstr ""
+"Eclipse で、 `File → Import` をクリックします。ウィザードで、 `Maven → Existing Maven Project` "
+"を選択します。次の画面で、プロジェクトのルートの場所を選択します。次の画面では、見つかったモジュールのリストが表示されるので、生成されたプロジェクトを選択して "
+"`Finish` をクリックします。生成されたプロジェクトを選択し、 をクリックします。"
 
 #. type: Plain text
 #: upstream/_guides/ide-configuration.adoc:108
+#, fuzzy
 msgid ""
 "In a separated terminal, run `mvn compile quarkus:dev`, and enjoy a highly "
 "productive environment."
-msgstr ""
+msgstr "分離された端末で `mvn compile quarkus:dev` を実行し、生産性の高い環境を楽しむことができます。"
 
 #. type: Plain text
 #: upstream/_guides/ide-configuration.adoc:110
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "**IntelliJ**\n"
-msgstr ""
+msgstr "*インテリジェイ*"
 
 #. type: Plain text
 #: upstream/_guides/ide-configuration.adoc:112
+#, fuzzy
 msgid "In IntelliJ:"
-msgstr ""
+msgstr "IntelliJでは。"
 
 #. type: Plain text
 #: upstream/_guides/ide-configuration.adoc:114
+#, fuzzy
 msgid ""
 "From inside IntelliJ select `File -> New -> Project From Existing Sources..."
 "` or, if you are on the welcome dialog, select `Import project`."
 msgstr ""
+"IntelliJの内部から `File → New → Project From Existing Sources…​` "
+"を選択するか、ウェルカム・ダイアログであれば `Import project` を選択してください。"
 
 #. type: Plain text
 #: upstream/_guides/ide-configuration.adoc:115
 #: upstream/_guides/ide-configuration.adoc:127
+#, fuzzy
 msgid "Select the project root"
-msgstr ""
+msgstr "プロジェクトのルートを選択します。"
 
 #. type: Plain text
 #: upstream/_guides/ide-configuration.adoc:116
+#, fuzzy
 msgid "Select `Import project from external model` and `Maven`"
-msgstr ""
+msgstr "`Import project from external model` を選択して `Maven`"
 
 #. type: Plain text
 #: upstream/_guides/ide-configuration.adoc:117
+#, fuzzy
 msgid "Next a few times (review the different options if needed)"
-msgstr ""
+msgstr "次は数回（必要に応じて異なる選択肢を見直す"
 
 #. type: Plain text
 #: upstream/_guides/ide-configuration.adoc:118
+#, fuzzy
 msgid "On the last screen click on Finish"
-msgstr ""
+msgstr "最後の画面で「完了」をクリックします。"
 
 #. type: Plain text
 #: upstream/_guides/ide-configuration.adoc:120
+#, fuzzy
 msgid ""
 "In a separated terminal or in the embedded terminal, run `mvn compile "
 "quarkus:dev`. Enjoy!"
-msgstr ""
+msgstr "分離された端末または埋め込み端末で、 `mvn compile quarkus:dev` を実行してください。お楽しみください。"
 
 #. type: Plain text
 #: upstream/_guides/ide-configuration.adoc:122
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "**Apache Netbeans**\n"
-msgstr ""
+msgstr "*アパッチネットビーンズ*"
 
 #. type: Plain text
 #: upstream/_guides/ide-configuration.adoc:124
+#, fuzzy
 msgid "In Netbeans:"
-msgstr ""
+msgstr "ネットビーンズでは"
 
 #. type: Plain text
 #: upstream/_guides/ide-configuration.adoc:126
+#, fuzzy
 msgid "Select `File -> Open Project`"
-msgstr ""
+msgstr "選択 `File → Open Project`"
 
 #. type: Plain text
 #: upstream/_guides/ide-configuration.adoc:128
+#, fuzzy
 msgid "Click on `Open Project`"
-msgstr ""
+msgstr "をクリックしてください。 `Open Project`"
 
 #. type: Plain text
 #: upstream/_guides/ide-configuration.adoc:130
+#, fuzzy
 msgid ""
 "In a separated terminal or the embedded terminal, go to the project root and "
 "run `mvn compile quarkus:dev`. Enjoy!"
 msgstr ""
+"分離されたターミナルまたは埋め込みターミナルで、プロジェクトのルートに移動し、 `mvn compile quarkus:dev` "
+"を実行します。お楽しみください。"
 
 #. type: Plain text
 #: upstream/_guides/ide-configuration.adoc:132
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "**Visual Studio Code**\n"
-msgstr ""
+msgstr "*Visual Studioコード*"
 
 #. type: Plain text
 #: upstream/_guides/ide-configuration.adoc:133
+#, fuzzy
 msgid ""
 "Open the project directory in VS Code. If you have installed the Java "
 "Extension Pack (grouping a set of Java extensions), the project is loaded as "
 "a Maven project."
 msgstr ""
+"VS "
+"Codeでプロジェクトディレクトリを開きます。Java拡張パック（Java拡張のセットをグループ化したもの）をインストールしている場合、プロジェクトはMavenプロジェクトとしてロードされます。"
