--- a/i18n/po/ja_JP/_guides/kubernetes-config.adoc.po
+++ b/i18n/po/ja_JP/_guides/kubernetes-config.adoc.po
@@ -21,12 +21,13 @@ msgstr ""
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/kubernetes-config.adoc:6
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Quarkus - Kubernetes Config"
-msgstr ""
+msgstr "Quarkus - Kubernetes Config"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-config.adoc:12
+#, fuzzy
 msgid ""
 "Quarkus includes the `kubernetes-config` extension which allows developers "
 "to use Kubernetes https://cloud.google.com/kubernetes-engine/docs/concepts/"
@@ -35,20 +36,28 @@ msgid ""
 "them into the https://kubernetes.io/docs/concepts/workloads/pods/pod/[Pod] "
 "running the Quarkus application."
 msgstr ""
+"Quarkusには、 `kubernetes-config` 拡張機能が含まれており、開発者はQuarkusアプリケーションを実行している link:"
+"https://kubernetes.io/docs/concepts/workloads/pods/pod/"
+"[Pod]にマウントしなくても、Kubernetes link:https://cloud.google.com/kubernetes-engine/"
+"docs/concepts/configmap[ConfigMaps]と link:https://cloud.google.com/"
+"kubernetes-engine/docs/concepts/secret[Secrets]を設定ソースとして使用することができます。"
 
 #. type: Title ==
 #: upstream/_guides/kubernetes-config.adoc:14
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Configuration"
-msgstr ""
+msgstr "構成"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-config.adoc:18
+#, fuzzy
 msgid ""
 "Once you have your Quarkus project configured you can add the `kubernetes-"
 "config` extension by running the following command in your project base "
 "directory."
 msgstr ""
+"Quarkusプロジェクトを設定したら、プロジェクトのベースディレクトリで以下のコマンドを実行して、 `kubernetes-config` "
+"拡張機能を追加できます。"
 
 #. type: delimited block -
 #: upstream/_guides/kubernetes-config.adoc:22
@@ -58,8 +67,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-config.adoc:25
+#, fuzzy
 msgid "This will add the following to your `pom.xml`:"
-msgstr ""
+msgstr "これにより、 `pom.xml`."
 
 #. type: delimited block -
 #: upstream/_guides/kubernetes-config.adoc:32
@@ -73,51 +83,68 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/kubernetes-config.adoc:34
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Usage"
-msgstr ""
+msgstr "使用方法"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-config.adoc:37
+#, fuzzy
 msgid ""
 "The extension works by reading ConfigMaps and Secrets directly from the "
 "Kubernetes API server using the link:kubernetes-client[Kubernetes Client]."
 msgstr ""
+"この拡張機能は、Kubernet link:kubernetes-client[esクライアントを]使用してKubernetes "
+"APIサーバから直接ConfigMapsとSecretsを読み込むことで動作します。"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-config.adoc:39
+#, fuzzy
 msgid ""
 "The extension understands the following types of ConfigMaps and Secrets as "
 "input sources:"
-msgstr ""
+msgstr "拡張機能は、以下のタイプの ConfigMaps と Secrets を入力ソースとして理解します。"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-config.adoc:41
+#, fuzzy
 msgid ""
 "ConfigMaps and Secrets that contain literal data (see https://kubernetes.io/"
 "docs/tasks/configure-pod-container/configure-pod-configmap/#create-"
 "configmaps-from-literal-values[this] for an example on how to create one)"
 msgstr ""
+"リテラルデータを含む ConfigMaps と Secrets (作成方法の例は link:https://kubernetes.io/docs/"
+"tasks/configure-pod-container/configure-pod-configmap/#create-configmaps-"
+"from-literal-values[こちらを]参照)"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-config.adoc:42
+#, fuzzy
 msgid ""
 "ConfigMaps and Secrets created from files named `application.properties`, "
 "`application.yaml` or `application.yml` (see https://kubernetes.io/docs/"
 "tasks/configure-pod-container/configure-pod-configmap/#create-configmaps-"
 "from-files[this] for an example on how to create one)."
 msgstr ""
+"ConfigMapsとSecretsは、 `application.properties` 、 `application.yaml` 、または "
+"`application.yml` という名前のファイルから作成されます（作成方法の例は link:https://kubernetes.io/docs/"
+"tasks/configure-pod-container/configure-pod-configmap/#create-configmaps-"
+"from-files[こちらを]参照してください）。"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-config.adoc:45
+#, fuzzy
 msgid ""
 "You have to explicitly enable the retrieval of ConfigMaps and Secrets by "
 "setting `quarkus.kubernetes-config.enabled=true`.  The default is `false` in "
 "order to make it easy to test the application locally."
 msgstr ""
+"ConfigMaps と Secrets の取得を明示的に有効にするには、 `quarkus.kubernetes-config.enabled="
+"true` を設定する必要があります。デフォルトは `false` で、ローカルでのアプリケーションのテストを容易にするためです。"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-config.adoc:49
+#, fuzzy
 msgid ""
 "Afterwards, set the `quarkus.kubernetes-config.configmaps` property to "
 "configure which ConfigMaps should be used.  Set the `quarkus.kubernetes-"
@@ -125,15 +152,20 @@ msgid ""
 "access ConfigMaps and Secrets from a specific namespace, you can set the "
 "`quarkus.kubernetes-config.namespace` property."
 msgstr ""
+"その後、 `quarkus.kubernetes-config.configmaps` プロパティを設定して、どの ConfigMaps "
+"を使用するかを設定します。 `quarkus.kubernetes-config.secrets` プロパティを設定して、どの Secrets "
+"を使用するかを設定します。特定の名前空間から ConfigMaps と Secrets にアクセスするには、 `quarkus.kubernetes-"
+"config.namespace` プロパティを設定します。"
 
 #. type: Title ===
 #: upstream/_guides/kubernetes-config.adoc:50
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Priority of obtained properties"
-msgstr ""
+msgstr "取得物件の優先順位"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-config.adoc:53
+#, fuzzy
 msgid ""
 "The properties obtained from the ConfigMaps and Secrets have a higher "
 "priority than (i.e. they override) any properties of the same name that are "
@@ -141,30 +173,36 @@ msgid ""
 "lower priority than properties set via Environment Variables or Java System "
 "Properties."
 msgstr ""
+"ConfigMapsとSecretsから取得したプロパティは、 `application.properties` "
+"(またはYAMLの等価物)にある同名のプロパティよりも高い優先度を持っています(すなわち、それらは上書きされます)が、環境変数やJavaシステムプロパティを介して設定されたプロパティよりも優先度は低くなります。"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-config.adoc:55
+#, fuzzy
 msgid ""
 "Furthermore, when multiple ConfigMaps (or Secrets) are used, ConfigMaps (or "
 "Secrets) defined later in the list have a higher priority that ConfigMaps "
 "defined earlier in the list."
 msgstr ""
+"さらに、複数のコンフィグマップ(またはシークレット)を使用している場合、後から定義されたコンフィグマップ(またはシークレット)は、先に定義されたコンフィグマップ(またはシークレット)よりも優先度が高くなります。"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-config.adoc:57
+#, fuzzy
 msgid ""
 "Finally, when both ConfigMaps and Secrets are used, the latter always a "
 "higher priority than the former."
-msgstr ""
+msgstr "最後に、ConfigMapsとSecretsの両方を使用する場合、常に後者の方が前者よりも優先度が高くなります。"
 
 #. type: Title ===
 #: upstream/_guides/kubernetes-config.adoc:58
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Kubernetes Permissions"
-msgstr ""
+msgstr "Kubernetesのパーミッション"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-config.adoc:62
+#, fuzzy
 msgid ""
 "Since reading ConfigMaps involves interacting with the Kubernetes API "
 "Server, when https://kubernetes.io/docs/reference/access-authn-authz/rbac/"
@@ -173,32 +211,44 @@ msgid ""
 "used to run the application needs to have the proper permissions for such "
 "access."
 msgstr ""
+"ConfigMapsの読み込みにはKubernetes API Serverとのやりとりが含まれるため、クラスタ上で link:https://"
+"kubernetes.io/docs/reference/access-authn-authz/rbac/"
+"[RBACが]有効になっている場合、アプリケーションを実行するために使用される link:https://kubernetes.io/docs/"
+"tasks/configure-pod-container/configure-service-account/"
+"[ServiceAccount]がそのようなアクセスに対して適切な権限を持っている必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-config.adoc:64
+#, fuzzy
 msgid ""
 "Thankfully, when using the `kubernetes-config` extension along with the link:"
 "deploying-to-kubernetes[Kubernetes] extension, all the necessary Kubernetes "
 "resources to make that happen are automatically generated."
 msgstr ""
+"ありがたいことに、 link:deploying-to-kubernetes[Kubernetes]拡張機能と一緒に `kubernetes-"
+"config` 拡張機能を使うと、それを実現するために必要なKubernetesリソースがすべて自動的に生成されます。"
 
 #. type: Title ====
 #: upstream/_guides/kubernetes-config.adoc:65
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Secrets"
-msgstr ""
+msgstr "秘密"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-config.adoc:69
+#, fuzzy
 msgid ""
 "By default, the link:deploying-to-kubernetes[Kubernetes] extension doesn't "
 "generate the necessary resources to allow accessing secrets.  Set `quarkus."
 "kubernetes-config.secrets.enabled=true` to generate the necessary role and "
 "corresponding role binding."
 msgstr ""
+"デフォルトでは、 link:deploying-to-"
+"kubernetes[Kubernetes]拡張機能は秘密にアクセスできるようにするために必要なリソースを生成しません。 `quarkus."
+"kubernetes-config.secrets.enabled=true` を設定して、必要なロールと対応するロールバインディングを生成します。"
 
 #. type: Title ==
 #: upstream/_guides/kubernetes-config.adoc:70
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Configuration Reference"
-msgstr ""
+msgstr "設定リファレンス"
