--- a/i18n/po/ja_JP/_guides/security-ldap.adoc.po
+++ b/i18n/po/ja_JP/_guides/security-ldap.adoc.po
@@ -21,78 +21,89 @@ msgstr ""
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/security-ldap.adoc:6
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Quarkus - Using Security with an LDAP Realm"
-msgstr ""
+msgstr "Quarkus - LDAPレルムでセキュリティを使用する"
 
 #. type: Plain text
 #: upstream/_guides/security-ldap.adoc:11
+#, fuzzy
 msgid ""
 "This guide demonstrates how your Quarkus application can use an LDAP server "
 "to authenticate and authorize your user identities."
-msgstr ""
+msgstr "このガイドでは、QuarkusアプリケーションがLDAPサーバーを使用してユーザーIDを認証および認証する方法を説明します。"
 
 #. type: Title ==
 #: upstream/_guides/security-ldap.adoc:13
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Prerequisites"
-msgstr ""
+msgstr "前提条件"
 
 #. type: Plain text
 #: upstream/_guides/security-ldap.adoc:16
+#, fuzzy
 msgid "To complete this guide, you need:"
-msgstr ""
+msgstr "このガイドを完成させるには、以下のものが必要です。"
 
 #. type: Plain text
 #: upstream/_guides/security-ldap.adoc:18
+#, fuzzy
 msgid "less than 15 minutes"
-msgstr ""
+msgstr "15分以内"
 
 #. type: Plain text
 #: upstream/_guides/security-ldap.adoc:19
+#, fuzzy
 msgid "an IDE"
-msgstr ""
+msgstr "アイディーイーイー"
 
 #. type: Plain text
 #: upstream/_guides/security-ldap.adoc:20
+#, fuzzy
 msgid "JDK 1.8+ installed with `JAVA_HOME` configured appropriately"
-msgstr ""
+msgstr "JDK 1.8+ がインストールされ、 `JAVA_HOME` が適切に設定されています。"
 
 #. type: Plain text
 #: upstream/_guides/security-ldap.adoc:21
+#, fuzzy
 msgid "Apache Maven {maven-version}"
-msgstr ""
+msgstr "Apache Maven {maven-version} の場合"
 
 #. type: Title ==
 #: upstream/_guides/security-ldap.adoc:22
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Architecture"
-msgstr ""
+msgstr "建築"
 
 #. type: Plain text
 #: upstream/_guides/security-ldap.adoc:25
+#, fuzzy
 msgid ""
 "In this example, we build a very simple microservice which offers three "
 "endpoints:"
-msgstr ""
+msgstr "この例では、3つのエンドポイントを提供する非常にシンプルなマイクロサービスを構築しています。"
 
 #. type: Plain text
 #: upstream/_guides/security-ldap.adoc:27
+#, fuzzy
 msgid "`/api/public`"
-msgstr ""
+msgstr "`/api/public`"
 
 #. type: Plain text
 #: upstream/_guides/security-ldap.adoc:28
+#, fuzzy
 msgid "`/api/users/me`"
-msgstr ""
+msgstr "`/api/users/me`"
 
 #. type: Plain text
 #: upstream/_guides/security-ldap.adoc:29
+#, fuzzy
 msgid "`/api/admin`"
-msgstr ""
+msgstr "`/api/admin`"
 
 #. type: Plain text
 #: upstream/_guides/security-ldap.adoc:33
+#, fuzzy
 msgid ""
 "The `/api/public` endpoint can be accessed anonymously.  The `/api/admin` "
 "endpoint is protected with RBAC (Role-Based Access Control) where only users "
@@ -102,47 +113,60 @@ msgid ""
 "Control) where only users granted with the `standardRole` role can access. "
 "As a response, it returns a JSON document with details about the user."
 msgstr ""
+"`/api/public` エンドポイントは匿名でアクセスできます。 `/api/admin` エンドポイントは RBAC (Role-Based "
+"Access Control) で保護されており、 `adminRole` ロールで許可されたユーザーのみがアクセスできます。このエンドポイントでは、 "
+"`@RolesAllowed` アノテーションを使用して、アクセス制約を宣言的に強制します。 `/api/users/me` エンドポイントも RBAC "
+"(Role-Based Access Control) で保護されており、 `standardRole` "
+"ロールで付与されたユーザーのみがアクセスできます。レスポンスとして、ユーザーに関する詳細を含むJSONドキュメントを返します。"
 
 #. type: Title ==
 #: upstream/_guides/security-ldap.adoc:34
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Solution"
-msgstr ""
+msgstr "解決策"
 
 #. type: Plain text
 #: upstream/_guides/security-ldap.adoc:38
+#, fuzzy
 msgid ""
 "We recommend that you follow the instructions in the next sections and "
 "create the application step by step.  However, you can go right to the "
 "completed example."
-msgstr ""
+msgstr "次の章で紹介する手順に沿って、ステップを踏んでアプリを作成することをお勧めします。ただし、完成した例にそのまま進んでも構いません。"
 
 #. type: Plain text
 #: upstream/_guides/security-ldap.adoc:40
+#, fuzzy
 msgid ""
 "Clone the Git repository: `git clone {quickstarts-clone-url}`, or download "
 "an {quickstarts-archive-url}[archive]."
 msgstr ""
+"Git リポジトリをクローンします: `git clone {quickstarts-clone-url}` 、または {quickstarts-"
+"archive-url}[archive] をダウンロードしてください。"
 
 #. type: Plain text
 #: upstream/_guides/security-ldap.adoc:42
+#, fuzzy
 msgid ""
 "The solution is located in the `security-ldap-quickstart` {quickstarts-tree-"
 "url}/security-ldap-quickstart[directory]."
 msgstr ""
+"ソリューションは `security-ldap-quickstart` {quickstarts-tree-url}/security-ldap-"
+"quickstart[directory] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/security-ldap.adoc:43
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Creating the Maven Project"
-msgstr ""
+msgstr "Mavenプロジェクトの作成"
 
 #. type: Plain text
 #: upstream/_guides/security-ldap.adoc:46
+#, fuzzy
 msgid ""
 "First, we need a new project. Create a new project with the following "
 "command:"
-msgstr ""
+msgstr "まず、新しいプロジェクトが必要です。以下のコマンドで新規プロジェクトを作成します。"
 
 #. type: delimited block -
 #: upstream/_guides/security-ldap.adoc:55
@@ -158,20 +182,27 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-ldap.adoc:59
+#, fuzzy
 msgid ""
 "This command generates a Maven project, importing the `elytron-security-"
 "ldap` extension which is a https://docs.wildfly.org/19/"
 "WildFly_Elytron_Security.html#ldap-security-realm[`wildfly-elytron-realm-"
 "ldap`] adapter for Quarkus applications."
 msgstr ""
+"このコマンドは、 `elytron-security-ldap` の拡張子をインポートして Maven プロジェクトを生成します。  link:"
+"https://docs.wildfly.org/19/WildFly_Elytron_Security.html#ldap-security-"
+"realm[`wildfly-elytron-realm-ldap`]Quarkusアプリケーション用のアダプタです。"
 
 #. type: Plain text
 #: upstream/_guides/security-ldap.adoc:62
+#, fuzzy
 msgid ""
 "If you already have your Quarkus project configured, you can add the "
 "`elytron-security-ldap` extension to your project by running the following "
 "command in your project base directory:"
 msgstr ""
+"すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリで以下のコマンドを実行することで、プロジェクトに "
+"`elytron-security-ldap` 拡張機能を追加することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/security-ldap.adoc:66
@@ -181,8 +212,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-ldap.adoc:69
+#, fuzzy
 msgid "This will add the following to your `pom.xml`:"
-msgstr ""
+msgstr "これにより、 `pom.xml`."
 
 #. type: delimited block -
 #: upstream/_guides/security-ldap.adoc:76
@@ -196,16 +228,18 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/security-ldap.adoc:78
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Writing the application"
-msgstr ""
+msgstr "アプリケーションの書き方"
 
 #. type: Plain text
 #: upstream/_guides/security-ldap.adoc:81
+#, fuzzy
 msgid ""
 "Let's start by implementing the `/api/public` endpoint. As you can see from "
 "the source code below, it is just a regular JAX-RS resource:"
 msgstr ""
+"まずは `/api/public` エンドポイントを実装してみましょう。下のソースコードを見ればわかるように、これは普通のJAX-RSリソースです。"
 
 #. type: delimited block -
 #: upstream/_guides/security-ldap.adoc:85
@@ -229,8 +263,7 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_guides/security-ldap.adoc:94
 #, no-wrap
-msgid ""
-"@Path(\"/api/public\")\n"
+msgid "@Path(\"/api/public\")\n"
 "public class PublicResource {\n"
 msgstr ""
 
@@ -249,12 +282,15 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-ldap.adoc:105
+#, fuzzy
 msgid ""
 "The source code for the `/api/admin` endpoint is also very simple. The main "
 "difference here is that we are using a `@RolesAllowed` annotation to make "
 "sure that only users granted with the `adminRole` role can access the "
 "endpoint:"
 msgstr ""
+"`/api/admin` エンドポイントのソースコードも非常にシンプルです。ここでの主な違いは、 `adminRole` "
+"ロールで付与されたユーザーだけがエンドポイントにアクセスできるように `@RolesAllowed` アノテーションを使用していることです。"
 
 #. type: delimited block -
 #: upstream/_guides/security-ldap.adoc:116
@@ -270,8 +306,7 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_guides/security-ldap.adoc:119
 #, no-wrap
-msgid ""
-"@Path(\"/api/admin\")\n"
+msgid "@Path(\"/api/admin\")\n"
 "public class AdminResource {\n"
 msgstr ""
 
@@ -290,6 +325,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-ldap.adoc:131
+#, fuzzy
 msgid ""
 "Finally, let's consider the `/api/users/me` endpoint. As you can see from "
 "the source code below, we are trusting only users with the `standardRole` "
@@ -297,6 +333,9 @@ msgid ""
 "authenticated Principal and we return the user's name. This information is "
 "loaded from the LDAP server."
 msgstr ""
+"最後に、 `/api/users/me` エンドポイントを考えてみましょう。下のソースコードを見ればわかるように、 `standardRole` "
+"の役割を持つユーザのみを信頼しています。現在認証されているプリンシパルへのアクセスを得るために `SecurityContext` "
+"を使用しており、ユーザー名を返します。この情報は LDAP サーバから読み込まれます。"
 
 #. type: delimited block -
 #: upstream/_guides/security-ldap.adoc:142
@@ -313,8 +352,7 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_guides/security-ldap.adoc:145
 #, no-wrap
-msgid ""
-"@Path(\"/api/users\")\n"
+msgid "@Path(\"/api/users\")\n"
 "public class UserResource {\n"
 msgstr ""
 
@@ -333,9 +371,9 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/security-ldap.adoc:155
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Configuring the Application"
-msgstr ""
+msgstr "アプリケーションの設定"
 
 #. type: delimited block -
 #: upstream/_guides/security-ldap.adoc:160
@@ -347,7 +385,8 @@ msgstr ""
 #: upstream/_guides/security-ldap.adoc:164
 #, no-wrap
 msgid ""
-"quarkus.security.ldap.dir-context.principal=uid=tool,ou=accounts,o=YourCompany,c=DE\n"
+"quarkus.security.ldap.dir-context.principal=uid=tool,ou=accounts,o="
+"YourCompany,c=DE\n"
 "quarkus.security.ldap.dir-context.url=ldaps://ldap.server.local\n"
 "quarkus.security.ldap.dir-context.password=PASSWORD\n"
 msgstr ""
@@ -357,7 +396,8 @@ msgstr ""
 #, no-wrap
 msgid ""
 "quarkus.security.ldap.identity-mapping.rdn-identifier=uid\n"
-"quarkus.security.ldap.identity-mapping.search-base-dn=ou=users,ou=tool,o=YourCompany,c=DE\n"
+"quarkus.security.ldap.identity-mapping.search-base-dn=ou=users,ou=tool,o="
+"YourCompany,c=DE\n"
 msgstr ""
 
 #. type: delimited block -
@@ -366,31 +406,38 @@ msgstr ""
 msgid ""
 "quarkus.security.ldap.identity-mapping.attribute-mappings.\"0\".from=cn\n"
 "quarkus.security.ldap.identity-mapping.attribute-mappings.\"0\".to=groups\n"
-"quarkus.security.ldap.identity-mapping.attribute-mappings.\"0\".filter=(member=uid={0})\n"
-"quarkus.security.ldap.identity-mapping.attribute-mappings.\"0\".filter-base-dn=ou=roles,ou=tool,o=YourCompany,c=DE\n"
+"quarkus.security.ldap.identity-mapping.attribute-mappings.\"0\".filter="
+"(member=uid={0})\n"
+"quarkus.security.ldap.identity-mapping.attribute-mappings.\"0\".filter-base-"
+"dn=ou=roles,ou=tool,o=YourCompany,c=DE\n"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-ldap.adoc:175
+#, fuzzy
 msgid ""
 "The `elytron-security-ldap` extension requires a dir-context and an identity-"
 "mapping with at least one attribute-mapping to authenticate the user and its "
 "identity."
 msgstr ""
+"`elytron-security-ldap` 拡張機能では、ユーザーとそのアイデンティティを認証するために、 dir-context "
+"と、少なくとも一つの属性マッピングを持つ identity-mapping が必要です。"
 
 #. type: Title ==
 #: upstream/_guides/security-ldap.adoc:176
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Testing the Application"
-msgstr ""
+msgstr "アプリケーションのテスト"
 
 #. type: Plain text
 #: upstream/_guides/security-ldap.adoc:180
+#, fuzzy
 msgid ""
 "The application is now protected and the identities are provided by our LDAP "
 "server.  The very first thing to check is to ensure the anonymous access "
 "works."
 msgstr ""
+"アプリケーションは保護され、アイデンティティはLDAPサーバーによって提供されるようになりました。まず最初に確認すべきことは、匿名アクセスが機能することを確認することです。"
 
 #. type: delimited block -
 #: upstream/_guides/security-ldap.adoc:187
@@ -410,8 +457,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-ldap.adoc:192
+#, fuzzy
 msgid "Now, let's try a to hit a protected resource anonymously."
-msgstr ""
+msgstr "では、匿名で保護されたリソースを攻撃してみましょう。"
 
 #. type: delimited block -
 #: upstream/_guides/security-ldap.adoc:199
@@ -431,14 +479,16 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-ldap.adoc:204
+#, fuzzy
 msgid "So far so good, now let's try with an allowed user."
-msgstr ""
+msgstr "ここまでは順調ですが、今度は許可されたユーザーで試してみましょう。"
 
 #. type: delimited block -
 #: upstream/_guides/security-ldap.adoc:211
 #, no-wrap
 msgid ""
-"$ curl -i -X GET -u adminUser:adminUserPassword http://localhost:8080/api/admin\n"
+"$ curl -i -X GET -u adminUser:adminUserPassword http://localhost:8080/api/"
+"admin\n"
 "HTTP/1.1 200 OK\n"
 "Content-Length: 5\n"
 "Content-Type: text/plain;charset=UTF-8\n"
@@ -452,24 +502,31 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-ldap.adoc:216
+#, fuzzy
 msgid ""
 "By providing the `adminUser:adminUserPassword` credentials, the extension "
 "authenticated the user and loaded their roles.  The `adminUser` user is "
 "authorized to access to the protected resources."
 msgstr ""
+"`adminUser:adminUserPassword` 資格情報を提供することで、拡張機能はユーザーを認証し、そのロールをロードしました。 "
+"`adminUser` ユーザーは、保護されたリソースへのアクセスを許可されています。"
 
 #. type: Plain text
 #: upstream/_guides/security-ldap.adoc:218
+#, fuzzy
 msgid ""
 "The user `adminUser` should be forbidden to access a resource protected with "
 "`@RolesAllowed(\"standardRole\")` because it doesn't have this role."
 msgstr ""
+"ユーザー `adminUser` は、この役割を持っていないので、 `@RolesAllowed(\"standardRole\")` "
+"で保護されたリソースへのアクセスを禁止する必要があります。"
 
 #. type: delimited block -
 #: upstream/_guides/security-ldap.adoc:225
 #, no-wrap
 msgid ""
-"$ curl -i -X GET -u adminUser:adminUserPassword http://localhost:8080/api/users/me\n"
+"$ curl -i -X GET -u adminUser:adminUserPassword http://localhost:8080/api/"
+"users/me\n"
 "HTTP/1.1 403 Forbidden\n"
 "Content-Length: 34\n"
 "Content-Type: text/html;charset=UTF-8\n"
@@ -483,16 +540,19 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-ldap.adoc:230
+#, fuzzy
 msgid ""
 "Finally, using the user `standardUser` works and the security context "
 "contains the principal details (username for instance)."
 msgstr ""
+"最後に、ユーザ `standardUser` を使用すると動作し、セキュリティコンテキストには主要な詳細（例えばユーザ名）が含まれています。"
 
 #. type: delimited block -
 #: upstream/_guides/security-ldap.adoc:237
 #, no-wrap
 msgid ""
-"$ curl -i -X GET -u standardUser:standardUserPassword http://localhost:8080/api/users/me\n"
+"$ curl -i -X GET -u standardUser:standardUserPassword http://localhost:8080/"
+"api/users/me\n"
 "HTTP/1.1 200 OK\n"
 "Content-Length: 4\n"
 "Content-Type: text/plain;charset=UTF-8\n"
@@ -506,23 +566,27 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/security-ldap.adoc:242
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "Configuration Reference"
-msgstr ""
+msgstr "設定リファレンス"
 
 #. type: Title ==
 #: upstream/_guides/security-ldap.adoc:246
-#, no-wrap
+#, no-wrap, fuzzy
 msgid "References"
-msgstr ""
+msgstr "参考文献"
 
 #. type: Plain text
 #: upstream/_guides/security-ldap.adoc:249
+#, fuzzy
 msgid ""
 "https://en.wikipedia.org/wiki/Lightweight_Directory_Access_Protocol[LDAP]"
 msgstr ""
+"link:https://en.wikipedia.org/wiki/"
+"Lightweight_Directory_Access_Protocol[エルディーエーピー]"
 
 #. type: Plain text
 #: upstream/_guides/security-ldap.adoc:249
+#, fuzzy
 msgid "link:security[Quarkus Security]"
-msgstr ""
+msgstr "link:security[Quarkusのセキュリティ]"
